# codegame

./: .gitignore  Cargo.toml  LICENSE
src/: lib.rs
src/app/: mod.rs
src/app/config_screen/: mod.rs  translations.txt
src/app/config_screen/player/: empty.rs  mod.rs  tcp.rs
src/app/game_screen/: mod.rs  translations.txt
src/app/game_screen/ui/: fullscreen_button.rs  mod.rs  play_stop_button.rs  timeline.rs  view_speed.rs  volume.rs
src/app/history/: load_native.rs  load_web.rs  mod.rs  save.rs
src/client_gen/: mod.rs
src/client_gen/cpp/: CMakeLists.txt  Debug.cpp  Debug.hpp  DebugInterface.cpp  DebugInterface.hpp  MyStrategy.cpp  MyStrategy.hpp  compile.sh  main.cpp  mod.rs
src/client_gen/csharp/: Debug.cs  DebugInterface.cs  Dockerfile  MyStrategy.cs  Runner.cs  mod.rs  run.sh
src/client_gen/dlang/: app.d  compile.sh  debug_interface.d  debugger.d  dub.json  mod.rs  my_strategy.d
src/client_gen/fsharp/: Debug.fs  DebugInterface.fs  MyStrategy.fs  Runner.fs  mod.rs  project.fsproj  run.sh
src/client_gen/go/: Dockerfile  compile.sh  debug.go  debug_interface.go  go.mod  main.go  mod.rs  my_strategy.go  run.sh
src/client_gen/java/: Debug.java  DebugInterface.java  MyStrategy.java  Runner.java  compile.sh  mod.rs  pom.xml  run.sh
src/client_gen/java/graalvm/: compile.sh  pom.xml
src/client_gen/java/vanilla/: pom.xml
src/client_gen/javascript/: debug-interface.js  debug.js  index.js  mod.rs  my-strategy.js
src/client_gen/kotlin/: Debug.kt  DebugInterface.kt  MyStrategy.kt  Runner.kt  mod.rs  pom.xml
src/client_gen/kotlin/graalvm/: compile.sh  pom.xml  run.sh
src/client_gen/kotlin/vanilla/: compile.sh  pom.xml
src/client_gen/markdown/: api-intro-ru.md  api-intro.md  mod.rs
src/client_gen/python/: debug.py  debug_interface.py  main.py  mod.rs  my_strategy.py
src/client_gen/ruby/: debug.rb  debug_interface.rb  main.rb  mod.rs  my_strategy.rb
src/client_gen/rust/: Cargo.toml.template  compile.sh  main.rs  mod.rs  my_strategy.rs
src/client_gen/scala/: Debug.scala  DebugInterface.scala  Dockerfile  MyStrategy.scala  Runner.scala  compile.sh  mod.rs  pom.xml
src/debug/: mod.rs
src/player/: mod.rs  stream.rs  tcp.rs
src/processor/: mod.rs
src/processor/background/: mod.rs  native.rs  web.rs
src/processor/strategy/: mod.rs  repeat.rs  standard.rs
