[package]
name = "codegame"
version = "0.7.0-alpha.3"
authors = ["kuviman <kuviman@gmail.com>"]
description = "CodeGame framework"
license = "MIT"
homepage = "https://github.com/codeforces/codegame"
edition = "2018"

[features]
default = ["rendering"]
rendering = ["geng"]
client-gen = ["trans-gen", "heck"]

[dependencies]
batbox = "0.5.0-alpha"
geng = { version = "0.6.0-alpha", optional = true }
trans-gen = { version = "0.3.0-alpha", optional = true }
heck = { version = "0.3", optional = true }
serde_json = "1"
serde = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "XmlHttpRequestResponseType",
    "ProgressEvent",
] }