[package]
name = "codegame"
version = "0.7.0"
authors = ["kuviman <kuviman@gmail.com>"]
description = "CodeGame framework"
license = "MIT"
homepage = "https://github.com/codeforces/codegame"
edition = "2018"

[features]
default = ["rendering"]
rendering = ["geng"]
client-gen = ["trans-gen", "heck"]

[dependencies]
batbox = "0.6.0"
geng = { version = "0.7.0", optional = true, default-features = false }
trans-gen = { version = "0.4.0", optional = true }
heck = { version = "0.3", optional = true }
serde_json = "1"
serde = "1"